test/files/neg/t7340a.check
Test_2.scala:5: error: type mismatch;
 found   : B
 required: C.Greeter
    (which expands to)  AnyRef{def hello(): Unit}
  val g: Greeter = new B
                   ^
one error found
